--- a/templates/manager.html
+++ b/templates/manager.html
@@ -1,4 +1,4 @@
-<div class="card employee-card">
+<div class="card employee-card" style="padding: 10px; margin: 5px">
     <div class="card-header" style="background-color: #0077F7">
         <h2 class="card-title">{{ name }}</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{ role }}</h3>
